rnsc/tests/snapshots/cli-quiet-assembler_warn.snap
---
source: rnsc/tests/cli_test.rs
expression: "&snapshot"
---
----- INPUT -----
.class public public final public EmptyClass
.super java/lang/Object

.class_end
----- DEFAULT -----
stdout: 
stderr: [TODO] Warning: duplicate access flag 'public' in class definition
   ╭─[ test_data/cli_integration/quiet/assembler_warn.rns:1:15 ]
   │
 1 │ .class public public final public EmptyClass
   │        ───┬── ───┬──       ───┬──  
   │           ╰──────────────────────── first defined here
   │                  │            │    
   │                  ╰───────────────── duplicate flag ignored here
   │                               │    
   │                               ╰──── duplicate flag ignored here
   │ 
   │ Note: The `public` flag was already specified. You only need to declare it once.
───╯
exit: true
hash: 6010eeb2ce551fd0533a3a87774dda36f009569f4239ca4a2bc8cbb60c1239b0
----- QUIET (-q) -----
stdout: 
stderr: 
exit: true
hash: 6010eeb2ce551fd0533a3a87774dda36f009569f4239ca4a2bc8cbb60c1239b0
