rnsc/tests/snapshots/cli-quiet-jvm_spec_warn.snap
---
source: rnsc/tests/cli_test.rs
expression: "&snapshot"
---
----- INPUT -----
.class abstract final interface EmptyClass
.super java/lang/Object

.class_end
----- DEFAULT -----
stdout: 
stderr: [JVMS-001] Warning: interface cannot be declared with mutually exclusive flags
   ╭─[ test_data/cli_integration/quiet/jvm_spec_warn.rns:1:23 ]
   │
 1 │ .class abstract final interface EmptyClass
   │                 ──┬── ────┬────  
   │                   ╰────────────── 'ACC_FINAL' is exclusive
   │                           │      
   │                           ╰────── 'ACC_INTERFACE' is declared here
   │ 
   │ Help: Consider removing: 'ACC_FINAL'.
   │ 
   │ Note: If this violation isn't intentional, see details at:
   │       https://rune.lagertha-vm.com/errors/JVMS-001
───╯
exit: true
hash: 156f8c079f506cc6c70aa01b1da85209867e6b47533d2dd52dafe7a9dff8b477
----- QUIET (-q) -----
stdout: 
stderr: 
exit: true
hash: 156f8c079f506cc6c70aa01b1da85209867e6b47533d2dd52dafe7a9dff8b477
