rnsc/tests/snapshots/error-lexer-directives-dot_abstract.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.abstract static HelloWorl
ggg
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_abstract.rns:1:1 ]
   │
 1 │ .abstract static HelloWorl
   │ ────┬────  
   │     ╰────── '.abstract' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
