rnsc/tests/snapshots/error-lexer-directives-dot_dot_annotation.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
..annotation
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_dot_annotation.rns:1:1 ]
   │
 1 │ ..annotation
   │ ──────┬─────  
   │       ╰─────── '..annotation' is not a recognized directive
   │ 
   │ Help: Did you mean '.annotation'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
