rnsc/tests/snapshots/error-lexer-directives-dot_dot_code_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method      ..code
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_code.rns:1:14 ]
   │
 1 │ .method      ..code
   │              ───┬──  
   │                 ╰──── did you mean '.code' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
