rnsc/tests/snapshots/error-lexer-directives-dot_dot_end.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method

..class_end ; not valid
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_dot_end.rns:3:1 ]
   │
 3 │ ..class_end ; not valid
   │ ─────┬─────  
   │      ╰─────── '..class_end' is not a recognized directive
   │ 
   │ Help: Did you mean '.class_end'?
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
