rnsc/tests/snapshots/error-lexer-directives-dot_dot_end_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.method

..end ; not valid
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_dot_end.rns:3:1 ]
   │
 3 │ ..end ; not valid
   │ ──┬──  
   │   ╰──── did you mean '.end' ?
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
